Muestra la retícula.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>RPG Game</title>
+	<script src="js/game.js"></script>
 </head>
 <body>
-	Hello, world!
+	<canvas id="gameCanvas" width="300" height="300"></canvas>
 </body>
 </html>
