--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<script src="js/game.js"></script>
 </head>
 <body>
-	<canvas id="gameCanvas" width="300" height="300"></canvas>
+	<canvas id="gameCanvasCart" width="600" height="300"></canvas>
+	<canvas id="gameCanvasIso" width="600" height="300"></canvas>
+
+	<img src="img/greenTile.png" />
+	<img src = "img/redTile.png" />
 </body>
 </html>
