--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	</div>
 
 	<img src="img/greenTile.png" />
-	<img src = "img/redTile.png" />
+	<img src="img/redTile.png" />
+	<img src="img/walkableTile.png" />
+	<img src="img/activeTile.png" />
 </body>
 </html>
