Se puede seleccionar la posición a donde se quiere mover.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<canvas id="gameCanvasIso" width="600" height="300"></canvas>
 
 	<div id="ui">
-		<div id="menu">
+		<div class="menu">lorem</div>
+		<div class="menu" id="actions">
 			<ul id="menu_options">
 				<li id="move" class="active">Move</li>
 				<li id="act">Action</li>
