--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
 	<img src="img/redTile.png" />
 	<img src="img/walkableTile.png" />
 	<img src="img/activeTile.png" />
+	<img src="img/sprite_01.png" />
+	<img src="img/sprite_02.png" />
+	<img src="img/sprite_03.png" />
 </body>
 </html>
