--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<canvas id="gameCanvasCart" width="600" height="300"></canvas>
+
 	<div id="isoCanvases">
 		<canvas id="gameCanvasIso" width="600" height="300"></canvas>
 		<canvas id="gameCanvasIsoChars" width="600" height="300"></canvas>
@@ -31,7 +32,13 @@
 			12: List
 			13: Item Usage
 			14: Resolve Item
-			15: Battle Over<br>
+			15: Command Select
+			16: Resolve Special
+			17: Magic Target
+			18: Target Tile
+			19: Target Unit
+			20: Resolve Spell
+			21: Battle Over<br>
 			Current:
 			<span id="currentState"></span><br>
 			Previous:
@@ -44,7 +51,7 @@
 			CT: <span id="char1Ct"></span><br>
 			Acted: <span id="char1Acted"></span><br>
 			Moved: <span id="char1Moved"></span><br>
-			Current Animation: <span id="char1Animation"></span>
+			Eval Tiles: <span id="char1Tiles"></span>
 		</div>
 		<div class="debug" id="Character_2" style="border:1px solid red; width:100px; float:left;">
 			<div id="char2Name"></div>
@@ -52,6 +59,7 @@
 			CT: <span id="char2Ct"></span><br>
 			Acted: <span id="char2Acted"></span><br>
 			Moved: <span id="char2Moved"></span><br>
+			Eval Tiles: <span id="char2Tiles"></span>
 		</div>
 		<div class="debug" id="Character_3" style="border:1px solid red; width:100px; float:left;">
 			<div id="char3Name"></div>
@@ -59,10 +67,19 @@
 			CT: <span id="char3Ct"></span><br>
 			Acted: <span id="char3Acted"></span><br>
 			Moved: <span id="char3Moved"></span><br>
+			Eval Tiles: <span id="char3Tiles"></span>
+		</div>
+		<div class="debug" id="Character_4" style="border:1px solid red; width:100px; float:left;">
+			<div id="char4Name"></div>
+			HP: <span id="char4Hp"></span><br>
+			CT: <span id="char4Ct"></span><br>
+			Acted: <span id="char4Acted"></span><br>
+			Moved: <span id="char4Moved"></span><br>
+			Eval Tiles: <span id="char4Tiles"></span>
 		</div>
 
 		<div style="border:1px solid red; width:100px; float:left;">
-			Current Character: <span id="whoseCurrent"></span>
+			Charge Actions: <span id="chargeActions"></span>
 		</div>
 	</div>
 
@@ -142,6 +159,14 @@
 			</ul>
 		</div>
 
+		<div class="menu hidden" id="magicTarget">
+			<span id="magicTargetText">Target the tile or the unit?</span>
+			<ul id="magicTarget_options">
+				<li name="targetTile" id="targetTile" class="active">Tile</li>
+				<li name="targetUnit" id="targetUnit">Unit</li>
+			</ul>
+		</div>
+
 		<div class="menu hidden" id="confirmMenu">
 			<span id="confirmText">Move Here?</span>
 			<ul id="confirmMenu_options">
@@ -150,8 +175,16 @@
 			</ul>
 		</div>
 
-		<div class="menu hidden" id="anouncementMenu">
-			<span id="anouncementText">Lorem</span>
+		<div class="menu hidden" id="announcementMenu">
+			<span id="announcementText">Lorem</span>
+		</div>
+
+		<div class="menu hidden" id="stageMenu">
+			<ul id="stageMenu_options">
+				<li name="stage1" id="stage1" class="active">Stage 1</li>
+				<li name="stage2" id="stage2">Stage 2</li>
+				<li name="stage3" id="stage3">Stage 3</li>
+			</ul>
 		</div>
 
 		<div id="damageCont">
